# Rasperry_pi_2_WH_LLM

./: .gitignore  README.md  Rasperry_LLM_Setup.MD  setup.md
ai_assistant/: .gitignore  Cargo.toml  README.md  goal.md  install.sh  setup.md
ai_assistant/benchmarks/: results.md
ai_assistant/config/: identity.json  llm.example.json  llm.json  memory.example.json  memory.json  scheduler.json  telegram.json  tools.example.json  voice.example.json
ai_assistant/data/conversations/: default.md
ai_assistant/data/profiles/: assistant.md
ai_assistant/data/summaries/: default-1779068125.md  default-1779068259.md
ai_assistant/deploy/: ai_assistant.service
ai_assistant/scripts/: pi_validate.sh  release.sh
ai_assistant/src/: cli.rs  config.rs  lib.rs  main.rs  util.rs
ai_assistant/src/adapters/: llama_cpp.rs  mod.rs  storage.rs  telegram.rs  voice.rs
ai_assistant/src/core/: actions.rs  context.rs  harness.rs  identity.rs  inbound_queue.rs  memory.rs  mod.rs  prompts.rs  rag.rs  scheduler.rs  service.rs  session.rs  skills.rs  surfaces.rs  tasks.rs  tools.rs  (+2 more)
ai_assistant/tests/: context_compaction.rs  llama_connectivity.rs  rag_retrieval.rs  stress_runtime.rs
ec2_bin/: llama-gguf  llama-gguf-hash  llama-q8dot  llama-qwen2vl-cli  llama-vdot  rust_api  test-alloc  test-c  test-quantize-fns  test-quantize-perf  test-rope
raspi_llama_api/: app.py  requirements.txt
rust_api/: Cargo.toml  README.md
rust_api/src/: config.rs  inference.rs  main.rs  models.rs
scripts/: connect_clawbot_ec2.sh  expect_password.exp  raspi_ssh_long.exp  remote_raspi_inference_check.py
